<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_500"
    tools:context=".ui.activity.DecisionScreen">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_white_welcome"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie"
            android:layout_width="260dp"
            android:layout_height="260dp"
            android:layout_marginTop="10dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/mail_2" />

        <TextView
            android:id="@+id/helloText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/hello_text"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:padding="4dp" />

        <TextView
            android:id="@+id/userNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/dummy_name_large"
            android:textColor="@color/green_500"
            android:textSize="18sp"
            android:padding="4dp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/lookingBUtton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_looking_for_goods_or_services"
        android:fontFamily="@font/ubuntu_medium"
        app:backgroundTint="@color/green_700"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offeringButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/offeringButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_offering_goods_or_services"
        android:fontFamily="@font/ubuntu_medium"
        android:layout_marginTop="40dp"
        app:backgroundTint="@color/green_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/infoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/info_text"
        android:fontFamily="@font/ubuntu_medium"
        android:textColor="@color/white"
        app:iconTint="@color/white"
        app:icon="@drawable/ic_round_article"
        app:backgroundTint="@color/green_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>