<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".data.auth.StartingScreen">

    <ImageView
        android:id="@+id/splashImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/cd_logo_image"
        android:src="@drawable/farminika_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/splashText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/farminika_name"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/ubuntu_bold"
        app:layout_constraintEnd_toEndOf="@+id/splashImage"
        app:layout_constraintStart_toStartOf="@+id/splashImage"
        app:layout_constraintTop_toBottomOf="@+id/splashImage" />

    <LinearLayout
        android:id="@+id/linearLayoutStarting"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="30dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/welcome"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="@string/welcome_description"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonExpert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_medium"
                        android:paddingLeft="40dp"
                        android:paddingTop="10dp"
                        android:paddingRight="40dp"
                        android:paddingBottom="10dp"
                        android:text="@string/expert"
                        android:textSize="12sp"
                        app:backgroundTint="@color/black"
                        android:layout_marginEnd="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonFarmer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_medium"
                        android:paddingLeft="40dp"
                        android:paddingTop="10dp"
                        android:paddingRight="40dp"
                        android:paddingBottom="10dp"
                        android:text="@string/farmer"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:layout_marginStart="20dp"
                        app:backgroundTint="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>