<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.ProfileFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@color/green_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/back"
        android:layout_marginTop="10dp"
        android:layout_marginStart="2dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/farminika_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_bold"
        android:text="Keith Chad"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:padding="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textProfession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_regular"
        android:text="Farmer"
        android:layout_marginStart="10dp"
        android:textColor="#0120B9"
        android:textSize="20sp"
        android:padding="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUserName" />

    <TextView
        android:id="@+id/textPersonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_bold"
        android:text="Personal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textProfession" />

    <View
        android:layout_width="90dp"
        android:layout_height="3dp"
        android:background="@drawable/rounded_corners_white"
        app:layout_constraintEnd_toEndOf="@+id/textPersonal"
        app:layout_constraintStart_toStartOf="@+id/textPersonal"
        app:layout_constraintTop_toBottomOf="@id/textPersonal" />

    <TextView
        android:id="@+id/textOther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/ubuntu_regular"
        android:text="Other"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textPersonal"
        app:layout_constraintStart_toEndOf="@id/textPersonal"
        app:layout_constraintTop_toTopOf="@+id/textPersonal" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/test_photo"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/rounded_corners_white"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginTop="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_info"
            android:textColor="@color/black"
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="25sp"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/rounded_corners_white"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="10dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>